fc30/istio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynginx
spec:
  selector:
    matchLabels:
      app: mynginx
  template:
    metadata:
      labels:
        app: mynginx
    spec:
      containers:
        - image: nginx
          name: mynginx
          ports:
            - containerPort: 8000
