fc30/istio/vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
    - nginx-service
  http:
    -route:
      - destination:
        host: nginx-service
        subset: v1
        weight: 90
      - destination:
        host: nginx-service
        subset: v2
        weight: 10
